--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.3.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.8"
   }
 }
